--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "varjo-orion",
-  "version": "0.1.4",
+  "name": "orion",
+  "version": "0.2.0",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "author": "Maximilian Remming <maxremming@gmail.com>",
   "license": "UNLICENSED",
   "engines": {
-    "node": "6.4.0"
+    "node": "6.9.1"
   },
   "dependencies": {
     "cheerio": "^0.22.0",
