--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
+    "lodash": "^4.17.2",
     "request": "^2.74.0"
   }
 }
